[project]
name = "gnupg-key-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-gnupg>=0.5.4",
]

[dependency-groups]
dev = [
    "freezegun>=1.5.1",
    "isort>=6.0.0",
    "pytest>=8.3.4",
    "pytest-coverage>=0.0",
    "ruff>=0.9.7",
]
